# slack-lambdabot

./: slack-lambdabot.cabal  slack-lambdabot.conf  stack.yaml
src/: Config.hs  Main.hs
