name:                slack-lambdabot
version:             0.1.0.0
synopsis:            Lambdabot for Slack
description:         Lambdabot for Slack
author:              Mark Andrus Roberts
maintainer:          markandrusroberts@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable slack-lambdabot
  main-is:             Main.hs
  other-modules:       Config
                     , Modules
  hs-source-dirs:      src
  build-depends:       base >= 4.7
                     , configurator
                     , html-entities
                     , lambdabot-core
                     , lambdabot-haskell-plugins
                     , lambdabot-trusted
                     , lens
                     , silently
                     , slack-api
                     , text
                     , transformers
                     , utf8-string
  ghc-options:         -O2 -Wall -fno-warn-unused-do-bind -threaded
  default-language:    Haskell2010
